style.css
head {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}


body {
  font-family: 'Times New Roman', Times, serif;
  line-height: 1.6;
  background-color: #464849c3;
  color: #000;
  padding: 20px;
  padding-top: 0;
  margin: 0 ;
  width: 100%;
}


header {
  background-color: #133250; 
  color: #6d7f92;
  padding: 20px 0;
  text-align: center;
}

header h1 {
  font-size: 2.5rem;
  font-family: 'Times New Roman', Times, serif;
  margin-bottom: 0.5rem;
  font-style: italic;
}

header p {
  font-size: 1.2rem;
  color: #ffffff;
  font-family: 'Times New Roman', Times, serif;
}


nav {
  margin-top: 10px;
}

nav a {
  color: #ffffff;
  text-decoration:color(from color srgb r g b);
  margin: 0 15px;
  font-weight: bold;
}

nav a:hover {
  text-decoration: underline;
}


main {
  padding: 20px;
}

section {
  margin-bottom: 30px;
  width: auto;
}

h2 {
  color: #000000;
  margin-bottom: 10px;
}





form {
  background: #837d7d;
  padding: 20px;
  border-radius: 8px;
  box-shadow: 0 0 10px rgba(0,0,0,0.1);
  font-family: 'Times New Roman', Times, serif;
}

fieldset {
  border: 1px solid #ccc;
  margin-bottom: 20px;
  padding: 15px;
  border-radius: 5px;
}

legend {
  font-weight: bold;
  color: #4c4e50;
}

label {
  display: block;
  margin-top: 10px;
}

input, select {
  width: 100%;
  padding: 8px;
  margin-top: 5px;
  border: 1px solid #ccc;
  border-radius: 4px;
}

button {
  background-color: #34383d97;
  color: #fff;
  padding: 12px 20px;
  border: none;
  border-radius: 5px;
  cursor: pointer;
  font-size: 1em;
}

button:hover {
  background-color: #282b2d;
}


footer {
  position: relative;
  background-color: #133250;
  bottom: 0%;
  left: 0%;
  width: 100%;
  
  color: #000;
  text-align: center;
  padding: 15px;
  margin-top: 30px;
}

input[type=text], input[type=password] {
  width: 100%;
  padding: 15px;
  margin: 5px 0 22px 0;
  display: inline-block;
  border: none;
  background: #f1f1f1;
}

img {
  border-radius: 10px;
  max-width: fit-content;
}

